--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@astrojs/tailwind": "^1.0.0",
     "@astrojs/vue": "^1.0.0",
+    "@faker-js/faker": "^7.5.0",
     "vue": "^3.2.30"
   }
 }
