--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,9 @@
   "vueCompilerOptions": {
     "experimentalDisableTemplateSupport": true
   },
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "moduleResolution": "Node"
+  },
   "extends": "astro/tsconfigs/strict"
 }
