--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^2.24.0"
   },
   "devDependencies": {
+    "@astrojs/mdx": "^0.11.1",
     "@astrojs/tailwind": "^1.0.0",
     "@astrojs/vue": "^1.0.0",
     "@faker-js/faker": "^7.5.0",
