--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^1.0.0",
     "@astrojs/vue": "^1.0.0",
     "@faker-js/faker": "^7.5.0",
+    "@tailwindcss/typography": "^0.5.7",
     "vue": "^3.2.30"
   }
 }
